--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ignore vendor static files
+src/staticfiles/vendors
+
+# ignore local static files root
+local-cdn/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
