--- a/.github/workflows/1-hello-world.yaml
+++ b/.github/workflows/1-hello-world.yaml
@@ -1,6 +1,7 @@
 name: 1 - Hello World GitHub actions
 
 on:
+  workflow_dispatch: # Manually trigger the workflow
   push: # git push
     branch:
       - main
