--- a/.github/workflows/6-scheduled-production-worker.yaml
+++ b/.github/workflows/6-scheduled-production-worker.yaml
@@ -2,16 +2,16 @@ name: 6 - Scheduled Production Worker
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 1,12 * * *'
-  - cron: '0 4 1 * *'
+  #schedule:
+  # - cron: '0 1,12 * * *'
+  # - cron: '0 4 1 * *'
 
 # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
 jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+      DJANGO_DEBUG: 0
       STRIPE_TEST_OVERRIDE: 1
       STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
       NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
